graphql-client-codegen/java/com/martmists/multiplatform/graphql/codegen/GraphQLParser.java
package com.martmists.multiplatform.graphql.codegen;
// Generated from GraphQL.g4 by ANTLR 4.13.2

import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.atn.ATN;
import org.antlr.v4.runtime.atn.ATNDeserializer;
import org.antlr.v4.runtime.atn.ParserATNSimulator;
import org.antlr.v4.runtime.atn.PredictionContextCache;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.tree.ParseTreeListener;
import org.antlr.v4.runtime.tree.TerminalNode;

import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class GraphQLParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, EXECUTABLE_DIRECTIVE_LOCATION=13, TYPE_SYSTEM_DIRECTIVE_LOCATION=14, 
		K_TYPE=15, K_IMPLEMENTS=16, K_INTERFACE=17, K_SCHEMA=18, K_ENUM=19, K_UNION=20, 
		K_INPUT=21, K_DIRECTIVE=22, K_EXTEND=23, K_SCALAR=24, K_ON=25, K_FRAGMENT=26, 
		K_QUERY=27, K_MUTATION=28, K_SUBSCRIPTION=29, K_VALUE=30, K_TRUE=31, K_FALSE=32, 
		K_NULL=33, Name=34, IntValue=35, FloatValue=36, Sign=37, IntegerPart=38, 
		NonZeroDigit=39, ExponentPart=40, Digit=41, StringValue=42, BlockStringValue=43, 
		Ignored=44;
	public static final int
		RULE_graphqlSchema = 0, RULE_description = 1, RULE_schemaDef = 2, RULE_operationTypeDef = 3, 
		RULE_queryOperationDef = 4, RULE_mutationOperationDef = 5, RULE_subscriptionOperationDef = 6, 
		RULE_directiveLocationList = 7, RULE_directiveLocation = 8, RULE_executableDirectiveLocation = 9, 
		RULE_typeSystemDirectiveLocation = 10, RULE_directiveDef = 11, RULE_directiveList = 12, 
		RULE_directive = 13, RULE_directiveArgList = 14, RULE_directiveArg = 15, 
		RULE_typeDef = 16, RULE_typeExtDef = 17, RULE_fieldDefs = 18, RULE_implementationDef = 19, 
		RULE_inputTypeDef = 20, RULE_inputTypeExtDef = 21, RULE_inputValueDefs = 22, 
		RULE_inputValueDef = 23, RULE_interfaceDef = 24, RULE_scalarDef = 25, 
		RULE_unionDef = 26, RULE_unionExtDef = 27, RULE_unionTypes = 28, RULE_enumDef = 29, 
		RULE_enumValueDefs = 30, RULE_enumValueDef = 31, RULE_fieldDef = 32, RULE_argList = 33, 
		RULE_argument = 34, RULE_typeSpec = 35, RULE_typeName = 36, RULE_listType = 37, 
		RULE_required = 38, RULE_defaultValue = 39, RULE_anyName = 40, RULE_nameTokens = 41, 
		RULE_booleanValue = 42, RULE_value = 43, RULE_enumValue = 44, RULE_arrayValue = 45, 
		RULE_objectValue = 46, RULE_objectField = 47, RULE_nullValue = 48;
	private static String[] makeRuleNames() {
		return new String[] {
			"graphqlSchema", "description", "schemaDef", "operationTypeDef", "queryOperationDef", 
			"mutationOperationDef", "subscriptionOperationDef", "directiveLocationList", 
			"directiveLocation", "executableDirectiveLocation", "typeSystemDirectiveLocation", 
			"directiveDef", "directiveList", "directive", "directiveArgList", "directiveArg", 
			"typeDef", "typeExtDef", "fieldDefs", "implementationDef", "inputTypeDef", 
			"inputTypeExtDef", "inputValueDefs", "inputValueDef", "interfaceDef", 
			"scalarDef", "unionDef", "unionExtDef", "unionTypes", "enumDef", "enumValueDefs", 
			"enumValueDef", "fieldDef", "argList", "argument", "typeSpec", "typeName", 
			"listType", "required", "defaultValue", "anyName", "nameTokens", "booleanValue", 
			"value", "enumValue", "arrayValue", "objectValue", "objectField", "nullValue"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'{'", "'}'", "':'", "'|'", "'@'", "'('", "')'", "'&'", "'='", 
			"'['", "']'", "'!'", null, null, "'type'", "'implements'", "'interface'", 
			"'schema'", "'enum'", "'union'", "'input'", "'directive'", "'extend'", 
			"'scalar'", "'on'", "'fragment'", "'query'", "'mutation'", "'subscription'", 
			"'value'", "'true'", "'false'", "'null'", null, null, null, "'-'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, "EXECUTABLE_DIRECTIVE_LOCATION", "TYPE_SYSTEM_DIRECTIVE_LOCATION", 
			"K_TYPE", "K_IMPLEMENTS", "K_INTERFACE", "K_SCHEMA", "K_ENUM", "K_UNION", 
			"K_INPUT", "K_DIRECTIVE", "K_EXTEND", "K_SCALAR", "K_ON", "K_FRAGMENT", 
			"K_QUERY", "K_MUTATION", "K_SUBSCRIPTION", "K_VALUE", "K_TRUE", "K_FALSE", 
			"K_NULL", "Name", "IntValue", "FloatValue", "Sign", "IntegerPart", "NonZeroDigit", 
			"ExponentPart", "Digit", "StringValue", "BlockStringValue", "Ignored"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "GraphQL.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public GraphQLParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class GraphqlSchemaContext extends ParserRuleContext {
		public List<SchemaDefContext> schemaDef() {
			return getRuleContexts(SchemaDefContext.class);
		}
		public SchemaDefContext schemaDef(int i) {
			return getRuleContext(SchemaDefContext.class,i);
		}
		public List<TypeDefContext> typeDef() {
			return getRuleContexts(TypeDefContext.class);
		}
		public TypeDefContext typeDef(int i) {
			return getRuleContext(TypeDefContext.class,i);
		}
		public List<TypeExtDefContext> typeExtDef() {
			return getRuleContexts(TypeExtDefContext.class);
		}
		public TypeExtDefContext typeExtDef(int i) {
			return getRuleContext(TypeExtDefContext.class,i);
		}
		public List<InputTypeDefContext> inputTypeDef() {
			return getRuleContexts(InputTypeDefContext.class);
		}
		public InputTypeDefContext inputTypeDef(int i) {
			return getRuleContext(InputTypeDefContext.class,i);
		}
		public List<InputTypeExtDefContext> inputTypeExtDef() {
			return getRuleContexts(InputTypeExtDefContext.class);
		}
		public InputTypeExtDefContext inputTypeExtDef(int i) {
			return getRuleContext(InputTypeExtDefContext.class,i);
		}
		public List<UnionDefContext> unionDef() {
			return getRuleContexts(UnionDefContext.class);
		}
		public UnionDefContext unionDef(int i) {
			return getRuleContext(UnionDefContext.class,i);
		}
		public List<UnionExtDefContext> unionExtDef() {
			return getRuleContexts(UnionExtDefContext.class);
		}
		public UnionExtDefContext unionExtDef(int i) {
			return getRuleContext(UnionExtDefContext.class,i);
		}
		public List<EnumDefContext> enumDef() {
			return getRuleContexts(EnumDefContext.class);
		}
		public EnumDefContext enumDef(int i) {
			return getRuleContext(EnumDefContext.class,i);
		}
		public List<InterfaceDefContext> interfaceDef() {
			return getRuleContexts(InterfaceDefContext.class);
		}
		public InterfaceDefContext interfaceDef(int i) {
			return getRuleContext(InterfaceDefContext.class,i);
		}
		public List<ScalarDefContext> scalarDef() {
			return getRuleContexts(ScalarDefContext.class);
		}
		public ScalarDefContext scalarDef(int i) {
			return getRuleContext(ScalarDefContext.class,i);
		}
		public List<DirectiveDefContext> directiveDef() {
			return getRuleContexts(DirectiveDefContext.class);
		}
		public DirectiveDefContext directiveDef(int i) {
			return getRuleContext(DirectiveDefContext.class,i);
		}
		public GraphqlSchemaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_graphqlSchema; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GraphQLListener ) ((GraphQLListener)listener).enterGraphqlSchema(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GraphQLListener ) ((GraphQLListener)listener).exitGraphqlSchema(this);
		}
	}

	public final GraphqlSchemaContext graphqlSchema() throws RecognitionException {
		GraphqlSchemaContext _localctx = new GraphqlSchemaContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_graphqlSchema);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(111);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 13194172989440L) != 0)) {
				{
				setState(109);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
				case 1:
					{
					setState(98);
					schemaDef();
					}
					break;
				case 2:
					{
					setState(99);
					typeDef();
					}
					break;
				case 3:
					{
					setState(100);
					typeExtDef();
					}
					break;
				case 4:
					{
					setState(101);
					inputTypeDef();
					}
					break;
				case 5:
					{
					setState(102);
					inputTypeExtDef();
					}
					break;
				case 6:
					{
					setState(103);
					unionDef();
					}
					break;
				case 7:
					{
					setState(104);
					unionExtDef();
					}
					break;
				case 8:
					{
					setState(105);
					enumDef();
					}
					break;
				case 9:
					{
					setState(106);
					interfaceDef();
					}
					break;
				case 10:
					{
					setState(107);
					scalarDef();
					}
					break;
				case 11:
					{
					setState(108);
					directiveDef();
					}
					break;
				}
				}
				setState(113);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DescriptionContext extends ParserRuleContext {
		public TerminalNode StringValue() { return getToken(GraphQLParser.StringValue, 0); }
		public TerminalNode BlockStringValue() { return getToken(GraphQLParser.BlockStringValue, 0); }
		public DescriptionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_description; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GraphQLListener ) ((GraphQLListener)listener).enterDescription(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GraphQLListener ) ((GraphQLListener)listener).exitDescription(this);
		}
	}

	public final DescriptionContext description() throws RecognitionException {
		DescriptionContext _localctx = new DescriptionContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_description);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(114);
			_la = _input.LA(1);
			if ( !(_la==StringValue || _la==BlockStringValue) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SchemaDefContext extends ParserRuleContext {
		public TerminalNode K_SCHEMA() { return getToken(GraphQLParser.K_SCHEMA, 0); }
		public DirectiveListContext directiveList() {
			return getRuleContext(DirectiveListContext.class,0);
		}
		public List<OperationTypeDefContext> operationTypeDef() {
			return getRuleContexts(OperationTypeDefContext.class);
		}
		public OperationTypeDefContext operationTypeDef(int i) {
			return getRuleContext(OperationTypeDefContext.class,i);
		}
		public SchemaDefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_schemaDef; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GraphQLListener ) ((GraphQLListener)listener).enterSchemaDef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GraphQLListener ) ((GraphQLListener)listener).exitSchemaDef(this);
		}
	}

	public final SchemaDefContext schemaDef() throws RecognitionException {
		SchemaDefContext _localctx = new SchemaDefContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_schemaDef);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(116);
			match(K_SCHEMA);
			setState(118);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__4) {
				{
				setState(117);
				directiveList();
				}
			}

			setState(120);
			match(T__0);
			setState(122); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(121);
				operationTypeDef();
				}
				}
				setState(124); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 939524096L) != 0) );
			setState(126);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class OperationTypeDefContext extends ParserRuleContext {
		public QueryOperationDefContext queryOperationDef() {
			return getRuleContext(QueryOperationDefContext.class,0);
		}
		public MutationOperationDefContext mutationOperationDef() {
			return getRuleContext(MutationOperationDefContext.class,0);
		}
		public SubscriptionOperationDefContext subscriptionOperationDef() {
			return getRuleContext(SubscriptionOperationDefContext.class,0);
		}
		public OperationTypeDefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_operationTypeDef; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GraphQLListener ) ((GraphQLListener)listener).enterOperationTypeDef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GraphQLListener ) ((GraphQLListener)listener).exitOperationTypeDef(this);
		}
	}

	public final OperationTypeDefContext operationTypeDef() throws RecognitionException {
		OperationTypeDefContext _localctx = new OperationTypeDefContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_operationTypeDef);
		try {
			setState(131);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case K_QUERY:
				enterOuterAlt(_localctx, 1);
				{
				setState(128);
				queryOperationDef();
				}
				break;
			case K_MUTATION:
				enterOuterAlt(_localctx, 2);
				{
				setState(129);
				mutationOperationDef();
				}
				break;
			case K_SUBSCRIPTION:
				enterOuterAlt(_localctx, 3);
				{
				setState(130);
				subscriptionOperationDef();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class QueryOperationDefContext extends ParserRuleContext {
		public TerminalNode K_QUERY() { return getToken(GraphQLParser.K_QUERY, 0); }
		public AnyNameContext anyName() {
			return getRuleContext(AnyNameContext.class,0);
		}
		public QueryOperationDefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_queryOperationDef; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GraphQLListener ) ((GraphQLListener)listener).enterQueryOperationDef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GraphQLListener ) ((GraphQLListener)listener).exitQueryOperationDef(this);
		}
	}

	public final QueryOperationDefContext queryOperationDef() throws RecognitionException {
		QueryOperationDefContext _localctx = new QueryOperationDefContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_queryOperationDef);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(133);
			match(K_QUERY);
			setState(134);
			match(T__2);
			setState(135);
			anyName();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MutationOperationDefContext extends ParserRuleContext {
		public TerminalNode K_MUTATION() { return getToken(GraphQLParser.K_MUTATION, 0); }
		public AnyNameContext anyName() {
			return getRuleContext(AnyNameContext.class,0);
		}
		public MutationOperationDefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mutationOperationDef; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GraphQLListener ) ((GraphQLListener)listener).enterMutationOperationDef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GraphQLListener ) ((GraphQLListener)listener).exitMutationOperationDef(this);
		}
	}

	public final MutationOperationDefContext mutationOperationDef() throws RecognitionException {
		MutationOperationDefContext _localctx = new MutationOperationDefContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_mutationOperationDef);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(137);
			match(K_MUTATION);
			setState(138);
			match(T__2);
			setState(139);
			anyName();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SubscriptionOperationDefContext extends ParserRuleContext {
		public TerminalNode K_SUBSCRIPTION() { return getToken(GraphQLParser.K_SUBSCRIPTION, 0); }
		public AnyNameContext anyName() {
			return getRuleContext(AnyNameContext.class,0);
		}
		public SubscriptionOperationDefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_subscriptionOperationDef; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GraphQLListener ) ((GraphQLListener)listener).enterSubscriptionOperationDef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GraphQLListener ) ((GraphQLListener)listener).exitSubscriptionOperationDef(this);
		}
	}

	public final SubscriptionOperationDefContext subscriptionOperationDef() throws RecognitionException {
		SubscriptionOperationDefContext _localctx = new SubscriptionOperationDefContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_subscriptionOperationDef);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(141);
			match(K_SUBSCRIPTION);
			setState(142);
			match(T__2);
			setState(143);
			anyName();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DirectiveLocationListContext extends ParserRuleContext {
		public List<DirectiveLocationContext> directiveLocation() {
			return getRuleContexts(DirectiveLocationContext.class);
		}
		public DirectiveLocationContext directiveLocation(int i) {
			return getRuleContext(DirectiveLocationContext.class,i);
		}
		public DirectiveLocationListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_directiveLocationList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GraphQLListener ) ((GraphQLListener)listener).enterDirectiveLocationList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GraphQLListener ) ((GraphQLListener)listener).exitDirectiveLocationList(this);
		}
	}

	public final DirectiveLocationListContext directiveLocationList() throws RecognitionException {
		DirectiveLocationListContext _localctx = new DirectiveLocationListContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_directiveLocationList);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(150);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			while ( _alt!=2 && _alt!= ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(145);
					directiveLocation();
					setState(146);
					match(T__3);
					}
					} 
				}
				setState(152);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			}
			setState(153);
			directiveLocation();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DirectiveLocationContext extends ParserRuleContext {
		public ExecutableDirectiveLocationContext executableDirectiveLocation() {
			return getRuleContext(ExecutableDirectiveLocationContext.class,0);
		}
		public TypeSystemDirectiveLocationContext typeSystemDirectiveLocation() {
			return getRuleContext(TypeSystemDirectiveLocationContext.class,0);
		}
		public DirectiveLocationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_directiveLocation; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GraphQLListener ) ((GraphQLListener)listener).enterDirectiveLocation(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GraphQLListener ) ((GraphQLListener)listener).exitDirectiveLocation(this);
		}
	}

	public final DirectiveLocationContext directiveLocation() throws RecognitionException {
		DirectiveLocationContext _localctx = new DirectiveLocationContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_directiveLocation);
		try {
			setState(157);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case EXECUTABLE_DIRECTIVE_LOCATION:
				enterOuterAlt(_localctx, 1);
				{
				setState(155);
				executableDirectiveLocation();
				}
				break;
			case TYPE_SYSTEM_DIRECTIVE_LOCATION:
				enterOuterAlt(_localctx, 2);
				{
				setState(156);
				typeSystemDirectiveLocation();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ExecutableDirectiveLocationContext extends ParserRuleContext {
		public TerminalNode EXECUTABLE_DIRECTIVE_LOCATION() { return getToken(GraphQLParser.EXECUTABLE_DIRECTIVE_LOCATION, 0); }
		public ExecutableDirectiveLocationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_executableDirectiveLocation; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GraphQLListener ) ((GraphQLListener)listener).enterExecutableDirectiveLocation(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GraphQLListener ) ((GraphQLListener)listener).exitExecutableDirectiveLocation(this);
		}
	}
